# personal-site

./: .gitignore  README.md  _routes.json  astro.config.mjs  markdoc.config.json  markdoc.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
functions/: contact.ts
public/: robots.txt
server/: Cargo.toml  deploy.sh
server/src/: main.rs
src/: content.config.ts  styles.css
src/components/: Aside.astro  BlogPostCard.astro  ContactForm.svelte  Header.astro  ProjectCard.astro
src/content/: config.ts
src/content/blog/: adventures-with-libvirt.mdx  arp-poisoning-mystery.mdx  servers-and-static-sites.mdx  this-site.mdoc  this-site.mdx  vectorize-and-facial-recognition.mdx  welcome.mdoc  welcome.mdx
src/data/blog/: mullvad-multi-user-target.mdx  this-site.mdx  vectorize-and-facial-recognition.mdx
src/layouts/: MainLayout.astro
src/pages/: 404.astro  as213339.astro  contact.astro  index.astro  projects.astro
src/pages/blog/: [slug].astro  index.astro
